finished course-work
